# trade-sdks-py

./: .gitignore  pyproject.toml
src/bybit_sdk/: __init__.py
src/bybit_sdk/market/: get_instruments_info.py  get_orderbook.py
tests/test_bybit_sdk/: test_get_instruments_info.py  test_get_orderbook.py
